📫🦁 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -17,13 +17,13 @@
                 <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://timestamppilgrim011.herokuapp.com/November%2010,%202016</code><br>
-            <code>https://timestamp-ms.herokuapp.com/1478736000</code>
+            <code>https://timestamp-try.glitch.me/api/timestamp/January 1, 2016</code><br>
+            <code>https://timestamp-try.glitch.me/api/timestamp/1478736000</code>
             <h3>Example output:</h3>
             <code>
                 {
-                  "unix": 1478736000,      
-                  "natural": "November 10, 2016"
+                  "natural": "January 1, 2016",
+                  "unix": 1478736000
                 }
             </code>
         </div>
